--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul>
                     <li><a onclick="FuncMenu()" href="#">Home</a></li>
                     <li><a onclick="FuncMenu()" href="#reservation">Reservation</a></li>
-                    <li><a href="/menu.html">Menu</a></li>
+                    <li><a href="/Gupta-s_restaurant.github.io/menu.html">Menu</a></li>
                     <li><a href="/contact.html">Contact</a></li>
                 </ul>
             </nav>
