--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div>
                     <h1>Made With Love. Simply Delicious</h1>
                     <p>Lorem ipsum dolor sit amet, consectwetur adipiscing elit. Nunc mauris nibh, ullamcorper vitae dapibus sed, consectetur id tellus. Vestibulum dignissim accumsan nunc, vitae commodo sem maximus non. In hac habitasse.</p>
-                    <span><a href="/menu.html">View Menu</a></span>
+                    <span><a href="Gupta-s_restaurant.github.io/menu.html">View Menu</a></span>
                 </div>
                 <img src="/p1.jpg" alt="foto número 1">
             </div>
