--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
         <meta name="author" content="Gabriel Santana">
-        <link rel="shortcut icon" href="Gupta-s_restaurant.github.io/lo1.jpg" type="image/x-icon">
+        <link rel="shortcut icon" href="/Gupta-s_restaurant.github.io/lo1.jpg" type="image/x-icon">
         <title>Sid-Restaurant</title>
     </head>
 
@@ -28,7 +28,7 @@
                     <li><a onclick="FuncMenu()" href="#">Home</a></li>
                     <li><a onclick="FuncMenu()" href="#reservation">Reservation</a></li>
                     <li><a href="/Gupta-s_restaurant.github.io/menu.html">Menu</a></li>
-                    <li><a href="Gupta-s_restaurant.github.io/contact.html">Contact</a></li>
+                    <li><a href="/Gupta-s_restaurant.github.io/contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
