--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#reservation">Reservation</a></li>
                     <li><a onclick="FuncMenu()" href="#">Menu</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="/Gupta-s_restaurant.github.io/contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
