--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,9 @@
 
             <nav id="menu">
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="index.html#reservation">Reservation</a></li>
-                    <li><a href="/menu.html">Menu</a></li>
+                    <li><a href="/Gupta-s_restaurant.github.io/index.html">Home</a></li>
+                    <li><a href="/Gupta-s_restaurant.github.ioindex.html#reservation">Reservation</a></li>
+                    <li><a href="/Gupta-s_restaurant.github.io/menu.html">Menu</a></li>
                     <li><a onclick="FuncMenu()" href="#">Contact</a></li>
                 </ul>
             </nav>
