--- a/menu.html
+++ b/menu.html
@@ -42,13 +42,13 @@
 
             <div class="categories">
 
-                <a href="/starters.html">
+                <a href="/Gupta-s_restaurant.github.io/starters.html">
                     <div class="category0">
                         <span>Starters</span>
                     </div>
                 </a>
 
-                <a href="/north.html">
+                <a href="/Gupta-s_restaurant.github.io/north.html">
                     <div class="category1">
                         <span>North Dishes</span>
                     </div>
@@ -56,7 +56,7 @@
 
                 
 
-                <a href="/south.html">
+                <a href="/Gupta-s_restaurant.github.io/south.html">
                     <div class="category3">
                         <span>South Dishes</span>
                     </div>
@@ -66,7 +66,7 @@
 
                 
 
-                <a href="/desert.html">
+                <a href="/Gupta-s_restaurant.github.io/desert.html">
                     <div class="category6">
                         <span>Desserts</span>
                     </div>
