--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p>Lorem ipsum dolor sit amet, consectwetur adipiscing elit. Nunc mauris nibh, ullamcorper vitae dapibus sed, consectetur id tellus. Vestibulum dignissim accumsan nunc, vitae commodo sem maximus non. In hac habitasse.</p>
                     <span><a href="Gupta-s_restaurant.github.io/menu.html">View Menu</a></span>
                 </div>
-                <img src="/p1.jpg" alt="foto número 1">
+                <img src="/Gupta-s_restaurant.github.io/p1.jpg" alt="foto número 1">
             </div>
 
             <div class="organizar">
@@ -52,7 +52,7 @@
                     <p>Lorem ipsum dolor sit amet, consectwetur adipiscing elit. Nunc mauris nibh, ullamcorper vitae dapibus sed, consectetur id tellus. Vestibulum dignissim accumsan nunc, vitae commodo sem maximus non. In hac habitasse.</p>
                     <span><a href="About.pdf" downlo>About Gupta's</a></span>
                 </div>
-                <img src="/res2.jfif" alt="foto número 2">
+                <img src="/Gupta-s_restaurant.github.io/res2.jfif" alt="foto número 2">
             </div>
 
             <section class="reservas">
