--- a/starters.html
+++ b/starters.html
@@ -25,10 +25,10 @@
 
             <nav id="menu">
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/index.html#reservation">Reservation</a></li>
-                    <li><a href="/menu.html">Menu</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="/Gupta-s_restaurant.github.io/index.html">Home</a></li>
+                    <li><a href="/Gupta-s_restaurant.github.io/index.html#reservation">Reservation</a></li>
+                    <li><a href="/Gupta-s_restaurant.github.io/menu.html">Menu</a></li>
+                    <li><a href="/Gupta-s_restaurant.github.io/contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
